# evidence-seeker-results

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
data/: 2025_08_11_8fbff177-1f0c-4485-a0f7-d3f46bda6bb0.md  2025_08_11_8fbff177-1f0c-4485-a0f7-d3f46bda6bb0.yaml  2025_08_11_d6e451ca-4eea-4873-8828-ee88b3a24dd3.md  2025_08_11_d6e451ca-4eea-4873-8828-ee88b3a24dd3.yaml  request_2025_08_01_49d05eba-516e-4c77-bad4-ca1ba6862cfc.yaml  request_2025_08_01_774c518e-ee4e-48e2-bfa7-68fd683293bd.yaml  request_2025_08_03_21b7e843-8a56-4031-be63-85e16ffb8641.yaml  request_2025_08_08_56ccd501-c10e-458a-a1ba-7cdb4386bce7.md  request_2025_08_08_56ccd501-c10e-458a-a1ba-7cdb4386bce7.yaml  request_2025_08_08_677e1e34-a850-41d4-bf90-4ff5ffc9f010.md  request_2025_08_08_677e1e34-a850-41d4-bf90-4ff5ffc9f010.yaml  request_251d70a5-9ece-4e6d-bf8a-7e41f052445b.yaml
data/2025_08_01/: request_2025_08_01_58c2a6e7-6af9-41d0-ac39-4c6c94523341.yaml  request_2025_08_01_f087fe02-3a8a-4d3e-bf0b-22c8e2642fd5.yaml
data/2025_08_12/: 2025_08_12_1d227928-617b-4004-8ae6-a4e0daaecf32.md  2025_08_12_1d227928-617b-4004-8ae6-a4e0daaecf32.yaml  2025_08_12_97cde0a9-11bd-440a-aa60-93d8ceb2535d.md  2025_08_12_97cde0a9-11bd-440a-aa60-93d8ceb2535d.yaml  2025_08_12_d56c1b51-402b-497e-b116-db1e1b4f828c.md  (+1 more)
docs/: extra_styles.css  index.md  main_idea.md
hooks/: initialisation.py
res/: request_7913e354-1bde-4784-9a26-e0a471b08ae9.yaml  request_d4b8c590-aad4-4ba5-b9c5-861e5dc8a662.yaml
src/: initialisation.py
templates/: index.tmpl  result.tmpl
(+32 files in other folders)
